[package]
name = "gbdt"
version = "0.1.3"
authors = ["Tongxin Li <litongxin@baidu.com>", "Tianyi Li <n0b0dypku@gmail.com>", "Yu Ding <dingelish@gmail.com>"]
homepage = "https://github.com/mesalock-linux/gbdt-rs"
repository = "https://github.com/mesalock-linux/gbdt-rs"
license = "Apache-2.0"
description = "A implementation of Gradient Boosting Regression Tree in Rust programming language"
edition = "2018"

include = [
    "LICENSE",
    "Readme.md",
    "Cargo.toml",
    "src/*.rs",
    "examples/*.rs",
]

[features]
default = ["enable_training"]
enable_training = []
profiling = []

[badges]

[lib]
name = "gbdt"
crate-type = ["rlib", "staticlib"]

[dependencies]
rand = "0.8"
serde = "1.0"
serde_derive = "1.0"
getrandom = { version = "0.2", features = ["js"] }
